   - less dependencies, Groovy is not needed anymore (was big)
   - parser implementations are now faster and more stable (Kotlin is typesafe)
   - refactoring of PolarHrmParser and some other parsers implemented in Groovy
     (huge monolithic code blocks)
   - Kotlin can now be used in all modules together with Java
     (no more mixed compilation issues with Groovy code)
 - removed compiler warnings in LeafletMap component
 - Issue #159: added support for Garmin Edge 820 exercise files
   - updated Garmin FIT SDK library to version 20.33.01, previous FIT library
     was not able to parse exercise files with the new protocol format 2.0
   - added unit test for a Garmin Edge 820 exercise file
 - updated Kotlin to version 1.1.50
 - TimexPwxParser: bugfixes for parsing of recording modes, speed and distance
   data

v7.4.0:
 SportsTracker changes:
 - the bundled Java runtime has been updated to Java SE/FX 8u121
 ExerciseViewer changes:
 - Issue #153: added chart smoothing in diagram view for all axis types
   - makes charts with a lot of sample data better readable
   - most improvements for speed, cadence and heartrate charts
 - Preferences: added option for displaying smoothed charts, enabled by default
 - Preferences: renamed option for displaying a secondary chart
   (some users can loose their previous preferences, needs to be set again)
 - Garmin TCX parser: added support for run cadence sensors (issue #154)
   (no need to add to Garmin FIT parser, already supported there)
 - Track Panel: use of Leaflet map viewer instead of Swing-based JXMapViewer2
   - added JavaFX component leafletmap as a separate Maven module, it's a
     wrapper for simple usage of the Leafletmap JavaScript map viewer inside
     the embedded JavaFX web browser
   - new map viewer supports multiple map layers, changeable inside the viewer
     - OpenStreetMap (default)
     - OpenCycleMap
     - Hike & Bike Map
     - MTB Map
   - new map viewer displays a scale control